<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/create_meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"/>

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            tools:context=".MainActivity"
            tools:ignore="MergeRootFrame" >
        </FrameLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/inside_create_meeting_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:hint="@string/name" />

            <DatePicker
                android:id="@+id/dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentLeft="true"
                android:calendarViewShown="false"
                android:layout_toLeftOf="@+id/times"/>

            <TimePicker
                android:id="@id/times"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentRight="true"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:lines="3"
                android:layout_below="@id/dates"
                android:hint="@string/description" />

            <Button
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_centerHorizontal="true"
                android:text="@string/create" />

        </RelativeLayout>

    </RelativeLayout>

    <ListView android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFFFFF"/>

</android.support.v4.widget.DrawerLayout>