<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/create_meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/inside_detail_meeting_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="30dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/abc_text_size_display_1_material"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/name"
                    android:alpha="0.65"
                    android:textColor="@color/black"
                    android:textSize="@dimen/abc_text_size_small_material"/>

                <TextView
                    android:id="@+id/organizer_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/datetime"
                    android:layout_marginTop="20dp"
                    android:alpha="0.65"
                    android:textColor="@color/black"
                    android:text="@string/organizer"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <TextView
                    android:id="@+id/organizer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/organizer_label"
                    android:layout_marginTop="5dp"
                    android:alpha="0.9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/abc_text_size_body_1_material"/>

                <TextView
                    android:id="@+id/location_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/organizer"
                    android:layout_marginTop="20dp"
                    android:alpha="0.65"
                    android:textColor="@color/black"
                    android:text="@string/location"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map_container"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/location_label"
                    android:layout_marginTop="5dp"
                    tools:ignore="MergeRootFrame" >
                </FrameLayout>


                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/map_container"
                    android:layout_marginTop="5dp"
                    android:alpha="0.9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/abc_text_size_body_1_material"/>

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location"
                    android:layout_marginTop="20dp"
                    android:alpha="0.65"
                    android:textColor="@color/black"
                    android:text="@string/description"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description_label"
                    android:layout_marginTop="5dp"
                    android:alpha="0.9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/abc_text_size_body_1_material"/>

                <TextView
                    android:id="@+id/participant_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_marginTop="20dp"
                    android:alpha="0.65"
                    android:textColor="@color/black"
                    android:text="@string/participant"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <ListView android:id="@+id/accepted_participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/participant_label"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:divider="@android:color/transparent"
                    android:background="@color/green_400">
                </ListView>

                <ListView android:id="@+id/maybe_participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/accepted_participant"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:divider="@android:color/transparent"
                    android:background="@color/yellow_400">
                </ListView>

                <ListView android:id="@+id/declined_participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/maybe_participant"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:divider="@android:color/transparent"
                    android:background="@color/red_400">
                </ListView>

                <ListView android:id="@+id/pending_participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/declined_participant"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:divider="@android:color/transparent"
                    android:background="@color/white">
                </ListView>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <ListView android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFFFFF"/>

</android.support.v4.widget.DrawerLayout>